#1420 - Add static method that only shows suggestions when players have permission to use that argument, mirrored statics there for consistency. Update documentation, temporary fix for CommandListener preventing non-opped players from using commands.